package dev.s8d.spring_graphql_federation.autorisatieapi.domain;

public enum CredentialType {
    PASSWORD,
    TOKEN,
    DIGID
}
